# RASD-NYUAD2026

./: .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
src/rasd_ai/: __init__.py  all_visz_generate_edit.py  build_baseline_routes.py  frontend  frontend.html  frontend2  generate_routing_inputs.py  make_all_visz.py  optimize_quantum.py  optimize_quantum_sim.py  optimize_quantum_solutiion.py  optimize_quantum_solution.py  predictor.py  priority_draw.py  prophet_draw.py  qr_generator.py  run_pipeline.py  simulator_hebron.py  test_imports.py
src/rasd_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/rasd_ai/config/: __init__.py  paths.py  settings.py
src/rasd_ai/data/: __init__.py  loaders.py  schemas.py
src/rasd_ai/exporters/: __init__.py  frontend.py
src/rasd_ai/forecasting/: __init__.py  prophet_model.py
src/rasd_ai/frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.cjs
src/rasd_ai/frontend/public/data/: README.txt  baseline_metrics.json  baseline_metrics_enriched.json  closures.json  priorities.csv  (+5 more)
src/rasd_ai/frontend/src/: App.tsx  index.css  translations.ts  types.ts  useLanguage.ts
src/rasd_ai/optimization/: __init__.py  baseline_greedy.py  metrics.py  quantum_anneal.py  routing_inputs.py
src/rasd_ai/outputs/: baseline_routes.json  closures.json  nodes.json  routing_pits.csv  travel_time_matrix.npy
src/rasd_ai/risk/: __init__.py  anomalies.py  fusion.py
src/rasd_ai/simulation/: __init__.py  hebron.py
src/rasd_ai/viz/: __init__.py  map_routes.py  plots.py
(+15 files in other folders)
